hphp/hack/test/typecheck/global_const5.php.exp
File "global_const5.php", line 3, characters 17-19:
Illegal constant value (Naming[2023])
