hphp/hack/test/typecheck/global_const5.php
<?hh

const mixed X = Map{};
